<resources>
    <string name="app_name">Budget Thing</string>
    <string name="fab_add_transaction_description">Add transaction</string>
    <string name="fab_add_category_description">Add category</string>

    <string name="nav_drawer_homepage_title">Homepage</string>
    <string name="nav_drawer_category_title">Categories</string>

    <string name="fragment_category_form_fab_description">Save category</string>
    <string name="fragment_category_form_name_hint">Name</string>
    <string name="income_category_type">Income</string>
    <string name="expense_category_type">Expense</string>
    <string name="category_type_title">Type</string>
    <string name="optional_description_hint">Description (optional)</string>
    <string name="required_field_hint">Field is required</string>

    <string-array name="category_tabs_names">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
</resources>
